--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <title>react-web-share-api-polyfill</title>
   </head>
@@ -16,5 +15,7 @@
     </noscript>
 
     <div id="root"></div>
+    <script type='module' src="/bundle.js"></script>
   </body>
+
 </html>
