Migrate to cra instead of rollup

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
     <title>react-web-share-api-polyfill</title>
   </head>
 
@@ -15,7 +17,6 @@
     </noscript>
 
     <div id="root"></div>
-    <script type='module' src="/bundle.js"></script>
   </body>
 
 </html>
